@@ -1,4 +1,4 @@
-/* $Id: pkgindb_queries.c,v 1.22 2012/04/14 19:24:39 imilh Exp $ */
+/* $Id: pkgindb_queries.c,v 1.23 2012/04/17 07:11:38 imilh Exp $ */
 
 /*
  * Copyright (c) 2009, 2010 The NetBSD Foundation, Inc.
@@ -120,23 +120,23 @@ const char UNKEEP_PKG[] =
 
 /* for upgrades, prefer higher versions to be at the top of SLIST */
 const char LOCAL_PKGS_QUERY_ASC[] =
-    "SELECT FULLPKGNAME,PKGNAME,PKGVERS,COMMENT,FILE_SIZE,SIZE_PKG "
+    "SELECT FULLPKGNAME,PKGNAME,PKGVERS,COMMENT,FILE_SIZE,SIZE_PKG,CATEGORIES "
 	"FROM LOCAL_PKG "
     "ORDER BY FULLPKGNAME ASC;";
 
 const char REMOTE_PKGS_QUERY_ASC[] =
-    "SELECT FULLPKGNAME,PKGNAME,PKGVERS,COMMENT,FILE_SIZE,SIZE_PKG "
+    "SELECT FULLPKGNAME,PKGNAME,PKGVERS,COMMENT,FILE_SIZE,SIZE_PKG,CATEGORIES "
 	"FROM REMOTE_PKG "
     "ORDER BY FULLPKGNAME ASC;";
 
 /* for displays, prefer lower versions to be at the top of SLIST*/
 const char LOCAL_PKGS_QUERY_DESC[] =
-    "SELECT FULLPKGNAME,PKGNAME,PKGVERS,COMMENT,FILE_SIZE,SIZE_PKG "
+    "SELECT FULLPKGNAME,PKGNAME,PKGVERS,COMMENT,FILE_SIZE,SIZE_PKG,CATEGORIES "
 	"FROM LOCAL_PKG "
     "ORDER BY FULLPKGNAME DESC;";
 
 const char REMOTE_PKGS_QUERY_DESC[] =
-    "SELECT FULLPKGNAME,PKGNAME,PKGVERS,COMMENT,FILE_SIZE,SIZE_PKG "
+    "SELECT FULLPKGNAME,PKGNAME,PKGVERS,COMMENT,FILE_SIZE,SIZE_PKG,CATEGORIES "
 	"FROM REMOTE_PKG "
     "ORDER BY FULLPKGNAME DESC;";
 
